// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caching suggestions should filter and select cached suggestions on empty value 1`] = `
[
  "No label",
  "Exclude label",
  "triage",
  "a11y",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`Caching suggestions should filter and select cached suggestions on empty value 2`] = `
[
  "a11y",
  "availability",
  "accessibility review",
  "batch",
  "triage",
  "🚨 critical",
  "📝 documentation",
  "
      GitHub 😄",
  "a11y (sev 1)",
  "team:engineering",
]
`;

exports[`Caching suggestions should filter and select cached suggestions on empty value 3`] = `
[
  "No label",
  "Exclude label",
  "triage",
  "a11y",
  "accessibility review",
  "batch",
  "availability",
  "🚫 blocked",
  "🐛 bug",
  "🚨 critical",
  "🎨 design",
  "🧪 experiment",
  "done",
  "📝 documentation",
  "
      GitHub 😄",
  "🔴 p1",
  "🟠 p2",
  "🟡 p3",
  "🔵 p4",
  "🔒 security",
  "tech debt",
  "user story",
]
`;

exports[`Caching suggestions should filter and select cached suggestions on value 1`] = `
[
  "a11y",
  "availability",
  "a11y (sev 1)",
  "accessibility review",
  "batch",
  "triage",
  "🚨 critical",
  "📝 documentation",
  "team:engineering",
  "
      GitHub 😄",
]
`;

exports[`Caching suggestions should filter and select cached suggestions on value 2`] = `
[
  "batch",
  "🐛 bug",
  "🚫 blocked",
  "tech debt",
  "availability",
  "
      GitHub 😄",
  "accessibility review",
]
`;

exports[`Caching suggestions should not display selected from cached suggestion 1`] = `
[
  "🚨 critical",
  "batch",
  "(cool",
  "tech debt",
  "🔒 security",
  "📝 documentation",
  "🚫 blocked",
  "
      GitHub 😄",
  "accessibility review",
]
`;

exports[`Caching suggestions should not display selected from cached suggestion 2`] = `
[
  "🚨 critical",
  "(cool",
  "batch",
  "tech debt",
  "🚫 blocked",
  "🔒 security",
  "📝 documentation",
  "
      GitHub 😄",
]
`;
